--- a/views/500.ejs
+++ b/views/500.ejs
@@ -5,5 +5,6 @@
     <%- include('includes/navigation.ejs') %>
     <h1>Some error occurred!</h1>
     <p>We're working on fixing this, sorry for the inconvenience!</p>
+    <p> <%= error%> </p>
 
 <%- include('includes/end.ejs') %>
